<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.fragments.AddOfficeFragment">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="15dp"
        app:cardCornerRadius="5dp"
        android:elevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            >
            <TextView
                android:id="@+id/tv_title_add_office"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_add_office"
                android:ems="10"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textSize="20sp"
                android:padding="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:textAlignment="center"
                />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ti_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_title_add_office"

                >

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/create_office_name"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:ems="10"
                    android:textSize="15sp"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ti_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ti_name">

                <EditText
                    android:id="@+id/et_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/create_office_address"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:ems="10"
                    android:textSize="15sp"
                    android:inputType="textAutoComplete|textAutoCorrect"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ti_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ti_address">

                <EditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/create_office_phone"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:ems="10"
                    android:textSize="15sp"
                    android:inputType="phone"/>

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/ti_lat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ti_phone">

                <EditText
                    android:id="@+id/et_lat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/create_office_lat"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:ems="10"
                    android:textSize="15sp"
                    android:inputType="numberDecimal"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ti_long"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ti_lat">

                <EditText
                    android:id="@+id/et_long"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/create_office_long"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:ems="10"
                    android:textSize="15sp"
                    android:inputType="numberDecimal"/>

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/bt_continue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ti_long"
                android:background="@color/colorPrimaryDark"
                android:textColor="@android:color/white"
                android:text="@string/create_office_continue"

                />
        </RelativeLayout>


    </android.support.v7.widget.CardView>

</FrameLayout>