<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.LoginActivity"
    android:background="@color/colorPrimary">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="15dp"
        app:cardCornerRadius="5dp"
        android:elevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            >
            <TextView
                android:id="@+id/tv_title_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_login"
                android:ems="10"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textSize="20sp"
                android:padding="10dp"
                android:textColor="@color/colorPrimaryDark"
                />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ti_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_title_login"

                >

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:ems="10"
                    android:textSize="15sp"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/il_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ti_name">

                <EditText
                    android:id="@+id/et_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:ems="10"
                    android:textSize="15sp"
                    android:inputType="textPassword"/>

            </android.support.design.widget.TextInputLayout>

            <Switch
                android:id="@+id/st_recorder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/record_user"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/il_address"
                android:textColor="@color/colorPrimaryLight"
                android:textStyle="bold"
                android:ems="10"
                android:textSize="15sp"
                />

            <TextView
                android:id="@+id/tv_new_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_account"
                android:layout_below="@+id/st_recorder"
                android:layout_alignParentEnd="true"
                android:textColor="@color/colorPrimaryLight"
                android:textStyle="bold"
                android:ems="10"
                android:textSize="15sp"
                />


        </RelativeLayout>


    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_enter"
        style="@style/Widget.Design.FloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_arrow_forward"
        />


</android.support.constraint.ConstraintLayout>